Chunk migration statistics are not recorded in the `moveChunk.commit` changelog entries

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v3.6, v3.4
    • Sharding 2018-02-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The changelog entries for `moveChunk.commit` no longer contain statistics about the migration. This was introduce in 3.4 as part of the rewrite of the migration source machinery.

      The statistics are already returned from the recipient as part of the _recvChunkCommit call. In order to fix this problem, these returned statistics need to be exposed as return value of the commitClone function and persisted in the moveChunk.commit record..

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Kaloian Manassiev
            Votes:
            3 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: