SERVER-31979 Chunk migration statistics included in moveChunk.commit in the changelog