src/mongo/db/s/migration_source_manager.cpp
@@ -268,17 +268,17 @@ Status MigrationSourceManager::commitChunkOnRecipient(OperationContext* txn) {
     auto scopedGuard = MakeGuard([&] { cleanupOnError(txn); });
 
     // Tell the recipient shard to fetch the latest changes.
-    Status commitCloneStatus = _cloneDriver->commitClone(txn);
+    auto commitCloneStatus = _cloneDriver->commitClone(txn);
 
     if (MONGO_FAIL_POINT(failMigrationCommit) && commitCloneStatus.isOK()) {
         commitCloneStatus = {ErrorCodes::InternalError,
                              "Failing _recvChunkCommit due to failpoint."};
     }
-
     if (!commitCloneStatus.isOK()) {
-        return {commitCloneStatus.code(),
-                str::stream() << "commit clone failed due to " << commitCloneStatus.toString()};
+        return commitCloneStatus.getStatus();
     }
+
+    _recipientCloneCounts = commitCloneStatus.getValue()["counts"].Obj().getOwned();
 
     _state = kCloneCompleted;
     scopedGuard.Dismiss();
@@ -435,7 +435,9 @@ Status MigrationSourceManager::commitChunkMetadataOnConfig(OperationContext* txn
                                                   << "from"
                                                   << _args.getFromShardId()
                                                   << "to"
-                                                  << _args.getToShardId()),
+                                                  << _args.getToShardId()
+                                                  << "counts"
+                                                  << _recipientCloneCounts),
                                        ShardingCatalogClient::kMajorityWriteConcern);
 
     return Status::OK();
